se agrega cron con la version de la ruta
